discussion/kv_engine/170541/170541_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 15:36:12.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 15:43:33.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43872/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43872/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36989/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36989/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16379/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5271/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5271/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17300/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17300/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18339/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18339/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25706/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17607/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17607/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15562/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15562/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14404/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5210/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
